custom input delegates working. Need to refactor how keybindings are stored.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -85,4 +85,13 @@ ManualIPAddress=
 
 [CoreRedirects]
 +ClassRedirects=(OldName="/Script/Flight.TestActor",NewName="/Script/Flight.FluidPhysicsVolume")
++ClassRedirects=(OldName="/Script/Flight.MainMenuRoot",NewName="/Script/Flight.FlightMenuRoot")
++ClassRedirects=(OldName="/Script/Flight.PlayerControllerInputComponent",NewName="/Script/Flight.FlightInputComp")
++ClassRedirects=(OldName="/Script/Flight.PlayerControllerMenuComponent",NewName="/Script/Flight.FlightMenuComp")
++ClassRedirects=(OldName="/Script/Flight.PlayerControllerMenuComponent",NewName="/Script/Flight.FlightMenuComp")
++ClassRedirects=(OldName="/Script/Flight.PrimaryPlayerController",NewName="/Script/Flight.FlightPlayerController")
++ClassRedirects=(OldName="/Script/Flight.PrimaryPlayerController",NewName="/Script/Flight.FlightPlayerController")
++PropertyRedirects=(OldName="/Script/Flight.FlightControlsMenuListEntry.Action",NewName="/Script/Flight.FlightControlsMenuListEntry.ActionText")
++PropertyRedirects=(OldName="/Script/Flight.FlightControlsMenuListEntry.Input",NewName="/Script/Flight.FlightControlsMenuListEntry.InputText")
++ClassRedirects=(OldName="/Script/Flight.CharacterPawn",NewName="/Script/Flight.FlightCharacterPawn")
 
