Switched to using Enhanced Input System. I really overcooked on my custom input system. Also added basic character animations

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -12,7 +12,7 @@ bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/Levels/L_RootWorld.L_RootWorld
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Game/Blueprints/BP_FlightGameMode.BP_FlightGameMode_C
+GlobalDefaultGameMode=/Game/GameState/BP_FlightGameMode.BP_FlightGameMode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
@@ -94,4 +94,17 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/Flight.FlightControlsMenuListEntry.Action",NewName="/Script/Flight.FlightControlsMenuListEntry.ActionText")
 +PropertyRedirects=(OldName="/Script/Flight.FlightControlsMenuListEntry.Input",NewName="/Script/Flight.FlightControlsMenuListEntry.InputText")
 +ClassRedirects=(OldName="/Script/Flight.CharacterPawn",NewName="/Script/Flight.FlightCharacterPawn")
++PropertyRedirects=(OldName="/Script/Flight.FlightCharacterPawnMovement.MoveAction",NewName="/Script/Flight.FlightCharacterInput.MoveInputAction")
++FunctionRedirects=(OldName="/Script/Flight.FlightCharacterPawnMovement.HandleMoveAction",NewName="/Script/Flight.FlightCharacterInput.HandleMove")
++FunctionRedirects=(OldName="/Script/Flight.FlightCharacterPawnMovement.HandleMove",NewName="/Script/Flight.FlightCharacterInput.HanldeMoveStart")
++FunctionRedirects=(OldName="/Script/Flight.FlightCharacterPawnMovement.HanldeMoveStart",NewName="/Script/Flight.FlightCharacterInput.HandleMoveStart")
++PropertyRedirects=(OldName="/Script/Flight.FlightCharacterPawnMovement.CurrentInputVelocity",NewName="/Script/Flight.FlightCharacterInput.LocalAcceleration")
++PropertyRedirects=(OldName="/Script/Flight.FlightCharacterPawnMovement.Velocity",NewName="/Script/Flight.FlightCharacterInput.LocalVelocity")
++PropertyRedirects=(OldName="/Script/Flight.FlightCharacterPawnMovement.Acceleration",NewName="/Script/Flight.FlightCharacterInput.LocalAcceleration")
++ClassRedirects=(OldName="/Script/Flight.FlightCharacterPawnMovement",NewName="/Script/Flight.FlightCharacterInput")
++PropertyRedirects=(OldName="/Script/Flight.FlightCharacterPawn.MovementComp",NewName="/Script/Flight.FlightCharacterPawn.Input")
++FunctionRedirects=(OldName="/Script/Flight.FlightCharacterInput.HandleMoveStart",NewName="/Script/Flight.FlightCharacterInput.HandleMove")
++PropertyRedirects=(OldName="/Script/Flight.FlightCharacterPawn.InputComponent",NewName="/Script/Flight.FlightCharacterPawn.Input")
++PropertyRedirects=(OldName="/Script/Flight.FlightCharacterPawn.MovementComponent",NewName="/Script/Flight.FlightCharacterPawn.Movement")
++PropertyRedirects=(OldName="/Script/Flight.FlightControlsMenuListEntry.RemapButton",NewName="/Script/Flight.FlightControlsMenuListEntry.ResetButton")
 
